# turbo-flow-claude

./: .env  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  P10-deployment-plan.md  PRD.md  QA_REVIEW_DELIVERABLES.md  QA_REVIEW_INDEX.md  QA_SUMMARY.txt  RUST_PROJECT_README.md  RUST_README_EXAMPLE.md  RUST_README_TEMPLATE.md  SESSION_LOG_FEB15.md  Strategy for mutha-bot.txt  auth-test.txt  claude.md  flow.sh  github_codespaces_setup.md  jest.config.js  learning-mission.txt  london_test.sh  package-lock.json  package.json  phase8-prompt.txt  release notes Claude.txt  run-ruvbot.sh  ruvbot-model-test.js  ruvector.db  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
.agentic-qe/: memory.db
.claude/: mcp.json  memory.db  settings.json
.claude-flow/: .trend-cache.json  CAPABILITIES.md  config.yaml  daemon-state.json
.claude-flow/agents/: store.json
.claude-flow/metrics/: codebase-map.json  consolidation.json  learning.json  performance.json  security-audit.json  swarm-activity.json  system-metrics.json  task-metrics.json  test-gaps.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude-flow/tasks/: store.json
.claude/docs/: v3-agents-index.md
.claude/skills/: README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.swarm/: hnsw.index  hnsw.metadata.json  model-router-state.json  schema.sql  state.json
agentdb-rust-prime/: CLAUDE.md  Cargo.toml  architecture_spec.md  package-lock.json
agentdb-rust-prime/.claude-flow/: MISSION_BRIDGE_TEST.md
agentdb-rust-prime/scripts/: BRIDGE_TEST_README.md  GEMINI_BRIDGE_TEST.md  SWARM_COORDINATOR_STATUS.md  TEST_EXECUTOR_REPORT.md  drift-check.sh  gemini-bridge-test.js  generate_spec.js  swarm-orchestrator-test.js  test-gemini-bridge-demo.js  test-gemini-bridge.js  test-gemini-bridge.sh
agentdb-rust-prime/src/: main.rs
agentdb_core/: Cargo.toml
agentdb_core/src/: lib.rs
agents/: README.md
agents/coder-agent/: api.js  fs_tools.js  package.json
agents/dispatcher/: api.js  package-lock.json  package.json  swarm.js
agents/memory-agent/: api.js  db.js  index.js  memory.sqlite  package-lock.json  package.json  seed.js  wasm-db.js
agents/midstreamer-agent/: embedder.js  logic.js  query-db.js  spec.md  vaccinate.js
agents/midstreamer-agent/agentdb_core/: ARCHITECTURE.md  Cargo.toml  README.md  build.sh  test_wasm.js
agents/midstreamer-agent/agentdb_core/src/: lib.rs
agents/researcher-agent/: api.js  package-lock.json  package.json  search_tools.js
aimds-rust/: .gitignore  Cargo.toml  Dockerfile  index.js  package.json
aimds-rust/src/: lib.rs  main.rs
apps/dashboard/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/l3-api-gateway/: package.json
apps/unix-adaptive-sentinel/: package.json
bunker-strategy-rs/: Cargo.toml
bunker-strategy-rs/src/: artifact_verifier.rs  did_passport.rs  endpoint_monitor.rs  jit_provenance.rs  lib.rs
crates/flatbuffers-schemas-rust/: Cargo.toml
crates/rvf-memory-physics/: Cargo.toml
crates/wasm-rpc-client/: Cargo.toml
crates/wasm-security-gate/: Cargo.toml
crates/wasm-security-gate/src/: config.rs  lib.rs  security_logic.rs
data/: learned-patterns.json
devpods/: setup.sh
docs/: QA_REVIEW_README.md  RUST_WASM_MIGRATION_COORD.md  WASM_INTEGRATION_README.md  agentdb-rust-wasm-requirements.md
docs/research/: AQE-Assessment-v1.md  Bunker-Architecture-v1.md  Bunker-PRD-v1.md  Bunker-Pseudocode-v1.md  Bunker-Strategy-v1.manifest.md  Bunker-Strategy-v1.md  Bunker-Strategy-v1.md.bundle  Bunker-Strategy-v1.md.pq.json  Bunker-Strategy-v1.tsa.json  QE-RedTeam-Report.md  gtig-prevention-v1.md  gtig_context.md
docs/security/: baselines.md
examples/: Strategy for mutha-bot.txt
research/: fundamental-price-disconnect-detection-system.md
schemas/: common.fbs  l3_gateway.fbs  rpc_bridge.fbs  rpc_messages.fbs  security_gate.fbs  sentinel_messages.fbs  unix_sentinel.fbs  wasm_gate.fbs
scripts/: baseline-scan.ts  generate-phase18-variants.ts  generate-red-team-data.ts  measure-lambda.ts  probe-partition-ratio.ts  provision-model.ts  security-scan.sh  seed-clean-reference.ts  seed-red-team.ts
scripts/data/: red-team-clean-reference.json  red-team-prompts.json
scripts/poc/: dashboard.ts  mcp-server.ts  mock-ruvbot.ts  package-rvf.ts  poc-server.ts
src/: main.ts  phase15-seed.ts  planner.ts  pq-wrap.ts  publish.ts
src/security/: adaptive-learner.ts  coordinator.ts  explorer.ts  live-mcp-client.ts  mcp-transport.ts  min-cut-gate.ts  semantic-chunker.ts  stoer-wagner.ts  (+1 more)
swarm-test/: README.md  app.js  logic.js  package.json
tests/: debug-similarity.js  manual_verification.js  quick-verify.js  wasm-integration-test.js
(+63 files in other folders)
