[package]
name = "aimds-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
candle-core = "0.6.0"

# CRITICAL FIX: Pin 'half' to 2.3.1 to block Rand 0.9
half = "=2.3.1"

# FORCE: Keep the rest of the ecosystem on Rand 0.8
rand = "0.8.5"
rand_distr = "0.4.3"
anyhow = "1.0.100"

# AI & Machine Learning Tools
candle-nn = "0.6.0"
tokenizers = { version = "0.19.1", default-features = false, features = ["onig"] }
hf-hub = "0.3.2"
candle-transformers = "0.6.0"
