[package]
name = "aimds-rust"
version = "0.1.0"
edition = "2021"

[lib]
# This tells Rust to build a dynamic library that Node.js can load
crate-type = ["cdylib"]

[dependencies]
# NAPI-RS Bridge
napi = { version = "2.12.0", features = ["default"] }
napi-derive = "2.12.0"

# Data & Math
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# AI & Machine Learning Tools
candle-core = "0.6.0"
candle-nn = "0.6.0"
tokenizers = { version = "0.19.1", default-features = false, features = ["onig"] }
hf-hub = "0.3.2"
candle-transformers = "0.6.0"

# Ecosystem Stability Pins
half = "=2.3.1"
rand = "0.8.5"
rand_distr = "0.4.3"

[build-dependencies]
napi-build = "2.0.1"
