[package]
name = "agentdb_core"
version = "0.1.0"
edition = "2021"
authors = ["AgentDB Contributors"]
description = "Vector database core with WASM bindings for AgentDB"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
